SRP and SOLID refactoring of codebase

--- a/.env
+++ b/.env
@@ -1,6 +1,28 @@
-export LOG_FILE_PATH="/app/logs/my_app.log"
-export LOG_LEVEL="10"  # 10 for DEBUG, 20 for INFO, etc.
-export LOG_MAX_BYTES="10485760"  # 10MB
-export LOG_BACKUP_COUNT="5"
-export ENABLE_CONSOLE_LOGGING="true"
-export ENABLE_FILE_LOGGING="true"
+# Logging configuration
+LOG_FILE_PATH="/app/logs/my_app.log"  # Path to the log file
+LOG_LEVEL="INFO"  # Logging level, options: DEBUG, INFO, WARNING, ERROR, CRITICAL
+LOG_MAX_BYTES="10485760"  # Maximum size of log file before rotation (10MB)
+LOG_BACKUP_COUNT="5"  # Number of rotated log files to keep
+ENABLE_CONSOLE_LOGGING="true"  # Enable logging to the console
+ENABLE_FILE_LOGGING="true"  # Enable logging to a file
+
+# Transcription settings
+WHISPER_MODEL_SIZE="base"  # Whisper model size: base, small, medium, large
+DEVICE="cuda"  # Device to use for processing: 'cuda' for GPU, 'cpu' for CPU-only
+
+# Directories and paths
+AUDIO_FILES_DIR="/app/audio_files"  # Directory for input audio files
+TRANSCRIPTIONS_DIR="/app/transcriptions"  # Directory for output transcriptions
+PROCESSED_TRANSCRIPTIONS_DIR="/app/processed_transcriptions"  # Directory for processed output
+
+# Retry and error handling
+RETRY_ON_FAILURE="true"  # Enable retry logic for failed tasks
+MAX_RETRIES="5"  # Maximum number of retries on failure
+RETRY_DELAY="5"  # Delay in seconds between retry attempts
+
+# Environment type
+ENVIRONMENT="development"  # Environment type: development, testing, production
+
+# Additional options for WhisperX features
+ALIGNMENT_ENABLED="true"  # Enable alignment for word-level timestamps
+DIARIZATION_ENABLED="true"  # Enable speaker diarization
