--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
-name = "requirements"
+name = "audio-transcription-tool"
 version = "0.1.0"
-description = "Core dependencies for transcription and audio processing"
+description = "A tool for downloading, transcribing, and processing audio files from YouTube."
 authors = ["SSD"]
 license = "MIT"
 readme = "README.md"
@@ -14,41 +14,44 @@ packages = [
 # Python compatibility range
 python = ">=3.10,<3.13"
 
-# Core dependencies for transcription and audio processing
-openai-whisper = { git = "https://github.com/openai/whisper.git" }  # Whisper AI for automatic transcription
-whisperx = "^0.x" # WhisperX - Advanced ASR (Automatic Speech Recognition) tool with word-level timestamps and alignment
-speechbrain = "^0.5.13"  # Advanced speech processing and speaker identification
-torch = "^2.0.1"  # Deep learning library used by Whisper and SpeechBrain
+# Core dependencies for transcription_pipeline and modules modules
+openai-whisper = { git = "https://github.com/openai/whisper.git" }
+whisperx = "^0.x"  # Advanced ASR with word-level timestamps and speaker diarization
+speechbrain = "^0.5.13"  # Advanced speech modules
+torch = "^2.0.1"  # Required for deep learning models
 
-# Scientific libraries for data processing
-numpy = "^1.23"  # Numerical operations and array manipulation
-pandas = "^1.5"  # Data manipulation and analysis in tabular format
-scipy = "^1.10"  # Scientific computing tools and algorithms
+# Scientific libraries for data modules
+numpy = "^1.23"  # For numerical operations
+pandas = "^1.5"  # For data manipulation
+scipy = "^1.10"  # For scientific computing
 
-# NLP tools for text processing
-nltk = "^3.8"  # Natural Language Toolkit for tokenization and sentence segmentation
-spacy = "^3.5"  # NLP library for tasks like named entity recognition
-spacy-transformers = "^1.2"  # Transformer integration within spaCy for advanced NLP capabilities
+# NLP tools for text modules
+nltk = "^3.8"  # For text tokenization and modules
+spacy = "^3.5"  # NLP library for named entity recognition
+spacy-transformers = "^1.2"  # Transformer integration for advanced NLP
 
-# Audio utilities for handling and processing audio files
-pydub = "^0.25"  # Audio processing library (e.g., cutting, joining, and format conversion)
-soundfile = "^0.12"  # For reading and writing audio files in various formats
+# Audio utilities for handling modules files
+pydub = "^0.25"  # For modules modules (format conversion, etc.)
+soundfile = "^0.12"  # For reading/writing modules files
 
-# Utilities for convenience and task automation
-requests = "^2.31"  # Library for making HTTP requests (e.g., web scraping, APIs)
-tqdm = "^4.65"  # Library for displaying progress bars for long-running tasks
-tenacity = "^8.2"  # Retry logic to handle potential transient errors in tasks
-python-dotenv = "^1.0"  # Loads environment variables from a .env file into the Python environment
-pyyaml = "^6.0"  # YAML parser for reading and writing configuration files
-click = "^8.1.3"  # Command-line interface creation library
+# Utilities for task automation and environment management
+requests = "^2.31"  # HTTP library for API requests
+tqdm = "^4.65"  # Progress bars for long-running tasks
+tenacity = "^8.2"  # Retry logic for handling transient errors
+python-dotenv = "^1.0"  # Loads environment variables from a .env file
+pyyaml = "^6.0"  # For YAML configuration file handling
+click = "^8.1.3"  # Command-line interface creation
 
 [tool.poetry.dev-dependencies]
-# Libraries for development, testing, and quality assurance
-pytest = "^7.0"  # Testing framework for Python
-pytest-cov = "^4.0"  # Coverage plugin for pytest to check code coverage
-black = "^23.0"  # Code formatter to ensure consistent code style
-flake8 = "^6.0"  # Linting tool for checking code quality and potential errors
+# Development, testing, and quality assurance tools
+pytest = "^7.0"  # Testing framework
+pytest-cov = "^4.0"  # Code coverage plugin for pytest
+black = "^23.0"  # Code formatter for consistent style
+flake8 = "^6.0"  # Linter for code quality checks
 mypy = "^1.0"  # Static type checker for Python
+
+[tool.poetry.scripts]
+app = "app:cli"  # Main entry point for click commands
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
