--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,26 +51,24 @@ services:
       - app_network
     restart: always
 
-  transcription_service:
-    build:
-      context: ./docker/transcription_service
-      dockerfile: Dockerfile_main_transcriber
-    volumes:
-      - ./data:/app/data
-    environment:
-      PAPERSERVE_API_KEY: ${PAPERSERVE_API_KEY}
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - capabilities: [gpu]  # Enable GPU if available
-    networks:
-      - app_network
-    restart: always
+transcription_service:
+  build:
+    context: ./docker/transcription_service
+    dockerfile: Dockerfile_main_transcriber
+  volumes:
+    - ./data:/app/data
+  environment:
+    LAMBDA_IP: "your.lambda.instance.ip"
+    LAMBDA_USER: "your_username"
+    LAMBDA_PATH: "/path/on/lambda/instance"
+  networks:
+    - app_network
+  restart: always
+
 
   text_loader:
     build:
-      context: ./docker/text_pipeline
+      context: ./docker/nlp_pipeline
       dockerfile: Dockerfile_text_loader
     volumes:
       - ./data:/app/data
@@ -80,7 +78,7 @@ services:
 
   text_segmenter:
     build:
-      context: ./docker/text_pipeline
+      context: ./docker/nlp_pipeline
       dockerfile: Dockerfile_text_segmenter
     volumes:
       - ./data:/app/data
@@ -90,7 +88,7 @@ services:
 
   text_tokenizer:
     build:
-      context: ./docker/text_pipeline
+      context: ./docker/nlp_pipeline
       dockerfile: Dockerfile_text_tokenizer
     volumes:
       - ./data:/app/data
@@ -100,7 +98,7 @@ services:
 
   ner_processor:
     build:
-      context: ./docker/text_pipeline
+      context: ./docker/nlp_pipeline
       dockerfile: Dockerfile_ner_processor
     volumes:
       - ./data:/app/data
@@ -110,7 +108,7 @@ services:
 
   text_saver:
     build:
-      context: ./docker/text_pipeline
+      context: ./docker/nlp_pipeline
       dockerfile: Dockerfile_text_saver
     volumes:
       - ./data:/app/data
@@ -120,12 +118,34 @@ services:
 
   celery_worker:
     build:
-      context: ./docker/celery_worker
-      dockerfile: Dockerfile_celery
+      context: ./docker/celery
+      dockerfile: Dockerfile_celery_worker
     depends_on:
       - django_app
+      - db
     volumes:
       - ./data:/app/data
+    environment:
+      DATABASE_URL: postgres://your_user:your_password@db:5432/your_db
+      CELERY_BROKER_URL: ${DATABASE_URL}
+      CELERY_RESULT_BACKEND: ${DATABASE_URL}
+    networks:
+      - app_network
+    restart: always
+
+  celery_beat:
+    build:
+      context: ./docker/celery
+      dockerfile: Dockerfile_celery_beat
+    depends_on:
+      - django_app
+      - db
+    volumes:
+      - ./data:/app/data
+    environment:
+      DATABASE_URL: postgres://your_user:your_password@db:5432/your_db
+      CELERY_BROKER_URL: ${DATABASE_URL}
+      CELERY_RESULT_BACKEND: ${DATABASE_URL}
     networks:
       - app_network
     restart: always
