--- a/docker/transcription_service/Dockerfile_main_transcriber
+++ b/docker/transcription_service/Dockerfile_main_transcriber
@@ -1,26 +1,31 @@
 # Dockerfile_main_transcriber
-FROM python:3.12-slim
 
-# Install system dependencies
-RUN apt-get update && \
-    apt-get install -y --no-install-recommends \
-    && rm -rf /var/lib/apt/lists/*
+FROM python:3.12-slim
 
 # Set working directory
 WORKDIR /app
 
-# Copy only the necessary files for dependencies first
+# (Optional) Install system dependencies if needed, like ffmpeg
+# RUN apt-get update && \
+#     apt-get install -y --no-install-recommends ffmpeg \
+#     && rm -rf /var/lib/apt/lists/*
+
+# Copy dependency files first to leverage Docker cache
 COPY pyproject.toml poetry.lock /app/
 
-# Install Poetry
+# Install Poetry and dependencies
 RUN pip install --upgrade pip && \
-    pip install poetry
-
-# Configure Poetry to not use virtual environments
-RUN poetry config virtualenvs.create false && poetry install --no-dev
+    pip install poetry && \
+    poetry config virtualenvs.create false && \
+    poetry install --no-dev
 
 # Copy the rest of the application code
 COPY . /app
 
-# Define the default command
+# Set environment variables for Lambda Labs integration
+ENV LAMBDA_IP=${LAMBDA_IP}
+ENV LAMBDA_USER=${LAMBDA_USER}
+ENV LAMBDA_PATH=${LAMBDA_PATH}
+
+# Define the default command to run main_transcriber.py using Poetry
 CMD ["poetry", "run", "python", "src/transcription_pipeline/main_transcriber.py"]
