--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -153,7 +153,7 @@ transcription_service:
   dask_worker:
     build:
       context: ./docker/dask_worker
-      dockerfile: Dockerfile_dask
+      dockerfile: Dockerfile_audio_conversion_worker
     depends_on:
       - django_app
     volumes:
