--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ tenacity = "^8.2"  # Retry logic
 python-dotenv = "^1.0"  # Load .env files
 pyyaml = "^6.0"  # YAML configuration
 click = "^8.1.3"  # CLI creation
+pybreaker = "^0.7.0"  # Circuit breaker library
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0"  # Testing framework
