--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,7 +68,7 @@ services:
   text_loader:
     build:
       context: ./docker/text
-      dockerfile: Dockerfile_text_loader
+      dockerfile: Dockerfile_loader
     volumes:
       - ./data:/data/data
     networks:
@@ -78,7 +78,7 @@ services:
   text_segmenter:
     build:
       context: ./docker/text
-      dockerfile: Dockerfile_text_segmenter
+      dockerfile: Dockerfile_segmenter
     volumes:
       - ./data:/data/data
     networks:
@@ -88,7 +88,7 @@ services:
   text_tokenizer:
     build:
       context: ./docker/text
-      dockerfile: Dockerfile_text_tokenizer
+      dockerfile: Dockerfile_tokenizer
     volumes:
       - ./data:/data/data
     networks:
@@ -108,7 +108,7 @@ services:
   text_saver:
     build:
       context: ./docker/text
-      dockerfile: Dockerfile_text_saver
+      dockerfile: Dockerfile_saver
     volumes:
       - ./data:/data/data
     networks:
