--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,15 @@ pyyaml = "^6.0"  # YAML configuration
 click = "^8.1.3"  # CLI creation
 pybreaker = "^0.7.0"  # Circuit breaker library
 
+# Logging
+structlog = "^23.0.0"  # Structlog for advanced logging
+
+# Date/Time Library
+pendulum = "^2.1.2"  # Date/Time library
+
+# Memory Profiling
+memory_profiler = "^0.61.0"  # Memory profiling library
+
 [tool.poetry.dev-dependencies]
 pytest = "^7.0"  # Testing framework
 pytest-cov = "^4.0"  # Code coverage
