chore: more refactors, added a dependency injector and cut down on all my extra dockers (it was very extra) i need to do more clean up

--- a/config/.env
+++ b/config/.env
@@ -1,39 +1,44 @@
-# Logging configuration
-LOG_FILE_PATH="/app/logs/my_app.log"
-LOG_LEVEL="INFO"
-LOG_MAX_BYTES="10485760"  # 10 MB for log rotation
-LOG_BACKUP_COUNT="5"  # Number of rotated log files to keep
-ENABLE_CONSOLE_LOGGING="true"  # Set to "false" if console logging is not needed
-ENABLE_FILE_LOGGING="true"  # Set to "false" if file logging is not needed
+# Logging Configuration
+LOG_FILE_PATH="/app/logs/app.log"  # Path for application logs
+LOG_LEVEL="INFO"  # Logging level (DEBUG, INFO, WARNING, ERROR)
+LOG_MAX_BYTES="10485760"  # Log rotation size limit (10 MB)
+LOG_BACKUP_COUNT="5"  # Number of backup log files to retain
+ENABLE_CONSOLE_LOGGING="true"  # Set to "false" to disable console logging
+ENABLE_FILE_LOGGING="true"  # Set to "false" to disable file logging
 
-# Transcription settings
-WHISPER_MODEL_SIZE="base"  # Whisper model size (e.g., base, small, medium, large)
-DEVICE="cuda"  # Device to use for processing: 'cuda' for GPU, 'cpu' for CPU-only
+# Transcription Settings
+WHISPER_MODEL_SIZE="base"  # Whisper model size (base, small, medium, large)
+DEVICE="cuda"  # Processing device ('cuda' for GPU, 'cpu' for CPU-only)
 
-# Directories and paths
-AUDIO_FILES_DIR="/app/audio_files"  # Directory for input audio files
-TRANSCRIPTIONS_DIR="/app/transcriptions"  # Directory for output transcriptions
-PROCESSED_TRANSCRIPTIONS_DIR="/app/processed_transcriptions"  # Directory for processed output files
+# Directory Configuration
+AUDIO_FILES_DIR="/app/audio_files"  # Directory for input audio_processor files
+TRANSCRIPTIONS_DIR="/app/transcriptions"  # Directory for raw transcription outputs
+PROCESSED_TRANSCRIPTIONS_DIR="/app/processed_transcriptions"  # Directory for processed outputs
 
-# Retry and error handling
-RETRY_ON_FAILURE="true"  # Enable retry logic for failed tasks
-MAX_RETRIES="5"  # Maximum number of retry attempts on failure
-RETRY_DELAY="5"  # Delay in seconds between retry attempts
+# Retry and Error Handling
+RETRY_ON_FAILURE="true"  # Enable retry mechanism for failed tasks
+MAX_RETRIES="5"  # Maximum retry attempts
+RETRY_DELAY="5"  # Delay (in seconds) between retries
 
-# Environment type
-ENVIRONMENT="development"  # Set to "production" in production environments
+# Environment Type
+ENVIRONMENT="development"  # Environment type ('development', 'staging', 'production')
 
-# Additional options for WhisperX features
+# WhisperX Features
 ALIGNMENT_ENABLED="true"  # Enable word alignment for precise timestamps
-DIARIZATION_ENABLED="true"  # Enable speaker diarization if needed
+DIARIZATION_ENABLED="true"  # Enable speaker diarization
 
-# Database configuration (for PostgreSQL)
-POSTGRES_DB="transcriptions_db"  # Database name
-POSTGRES_USER="postgres"  # Database user
-POSTGRES_PASSWORD="password"  # Database password
-POSTGRES_HOST="db"  # Database host (should match the service name in docker-compose)
-POSTGRES_PORT="5432"  # PostgreSQL default port
-DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}"  # Full database URL
+# Database Configuration
+POSTGRES_DB="transcriptions_db"  # PostgreSQL database name
+POSTGRES_USER="postgres"  # PostgreSQL user
+POSTGRES_PASSWORD="password"  # PostgreSQL password
+POSTGRES_HOST="db"  # Database host (container name in Docker)
+POSTGRES_PORT="5432"  # Default PostgreSQL port
+DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}"
 
-# Django configuration
-DJANGO_SECRET_KEY="your_secret_key_here"  # Replace with a strong, unique secret key for Django
+# Django Configuration
+DJANGO_SECRET_KEY="your_secure_secret_key_here"  # Replace with a secure key
+DEBUG="True"  # Set to "False" in production
+ALLOWED_HOSTS="127.0.0.1,localhost"  # Comma-separated list of allowed hosts
+
+# Configuration Path
+CONFIG_PATH=/app/config/config.yaml
