--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,49 +4,35 @@ services:
   youtube_downloader:
     build:
       context: ./docker/downloaders
-      dockerfile: Dockerfile_youtube_downloader
+      dockerfile: Dockerfile_download_manager
     volumes:
-      - ./data:/data/data
+      - youtube_data:/data
+    environment:
+      - CONFIG_PATH=/app/config/config.yaml
     networks:
       - app_network
     restart: always
 
-  audio_converter:
+  audio_processor:
     build:
-      context: docker/audio
-      dockerfile: docker/audio/Dockerfile_converter
+      context: ./docker/audio_processor
+      dockerfile: Dockerfile
     volumes:
-      - ./data:/data/data
+      - audio_data:/data
+    environment:
+      - CONFIG_PATH=/app/config/config.yaml
     networks:
       - app_network
     restart: always
 
-  audio_normalizer:
+  text_processor:
     build:
-      context: docker/audio
-      dockerfile: docker/audio/Dockerfile_normalizer
+      context: ./docker/text_processor
+      dockerfile: Dockerfile
     volumes:
-      - ./data:/data/data
-    networks:
-      - app_network
-    restart: always
-
-  audio_splitter:
-    build:
-      context: docker/audio
-      dockerfile: docker/audio/Dockerfile_splitter
-    volumes:
-      - ./data:/data/data
-    networks:
-      - app_network
-    restart: always
-
-  audio_trimmer:
-    build:
-      context: docker/audio
-      dockerfile: docker/audio/Dockerfile_trimmer
-    volumes:
-      - ./data:/data/data
+      - text_data:/data
+    environment:
+      - CONFIG_PATH=/app/config/config.yaml
     networks:
       - app_network
     restart: always
@@ -54,63 +40,11 @@ services:
   transcription_service:
     build:
       context: ./docker/transcription_service
-      dockerfile: Dockerfile_main_transcriber
+      dockerfile: Dockerfile
     volumes:
-      - ./data:/data/data
+      - transcription_data:/data
     environment:
-      LAMBDA_IP: "your.lambda.instance.ip"
-      LAMBDA_USER: "your_username"
-      LAMBDA_PATH: "/path/on/lambda/instance"
-    networks:
-      - app_network
-    restart: always
-
-  text_loader:
-    build:
-      context: ./docker/text
-      dockerfile: Dockerfile_loader
-    volumes:
-      - ./data:/data/data
-    networks:
-      - app_network
-    restart: always
-
-  text_segmenter:
-    build:
-      context: ./docker/text
-      dockerfile: Dockerfile_segmenter
-    volumes:
-      - ./data:/data/data
-    networks:
-      - app_network
-    restart: always
-
-  text_tokenizer:
-    build:
-      context: ./docker/text
-      dockerfile: Dockerfile_tokenizer
-    volumes:
-      - ./data:/data/data
-    networks:
-      - app_network
-    restart: always
-
-  ner_processor:
-    build:
-      context: ./docker/text
-      dockerfile: Dockerfile_ner_processor
-    volumes:
-      - ./data:/data/data
-    networks:
-      - app_network
-    restart: always
-
-  text_saver:
-    build:
-      context: ./docker/text
-      dockerfile: Dockerfile_saver
-    volumes:
-      - ./data:/data/data
+      - CONFIG_PATH=/app/config/config.yaml
     networks:
       - app_network
     restart: always
@@ -118,133 +52,14 @@ services:
   celery_worker:
     build:
       context: ./docker/celery
-      dockerfile: docker/celery/Dockerfile_worker
+      dockerfile: Dockerfile_worker
     depends_on:
       - django_app
       - db
     volumes:
-      - ./data:/data/data
+      - celery_data:/data
     environment:
-      DATABASE_URL: postgres://your_user:your_password@db:5432/your_db
-      CELERY_BROKER_URL: ${DATABASE_URL}
-      CELERY_RESULT_BACKEND: ${DATABASE_URL}
-    networks:
-      - app_network
-    restart: always
-
-  celery_beat:
-    build:
-      context: ./docker/celery
-      dockerfile: docker/celery/Dockerfile_beat
-    depends_on:
-      - django_app
-      - db
-    volumes:
-      - ./data:/data/data
-    environment:
-      DATABASE_URL: postgres://your_user:your_password@db:5432/your_db
-      CELERY_BROKER_URL: ${DATABASE_URL}
-      CELERY_RESULT_BACKEND: ${DATABASE_URL}
-    networks:
-      - app_network
-    restart: always
-
-  dask_scheduler:
-    build:
-      context: ./docker/dask_worker
-      dockerfile: Dockerfile_dask_scheduler
-    volumes:
-      - ./data:/data/data
-    networks:
-      - app_network
-    restart: always
-
-  dask_audio_conversion_worker:
-    build:
-      context: ./docker/dask_worker
-      dockerfile: Dockerfile_audio_conversion_worker
-    volumes:
-      - ./data:/data/data
-    networks:
-      - app_network
-    restart: always
-
-  dask_ner_worker:
-    build:
-      context: ./docker/dask_worker
-      dockerfile: Dockerfile_ner_worker
-    volumes:
-      - ./data:/data/data
-    networks:
-      - app_network
-    restart: always
-
-  dask_performance_monitor_worker:
-    build:
-      context: ./docker/dask_worker
-      dockerfile: Dockerfile_performance_monitor_worker
-    volumes:
-      - ./data:/data/data
-    networks:
-      - app_network
-    restart: always
-
-  dask_pipeline_manager:
-    build:
-      context: ./docker/dask_worker
-      dockerfile: Dockerfile_pipeline_manager
-    volumes:
-      - ./data:/data/data
-    networks:
-      - app_network
-    restart: always
-
-  dask_text_loading_worker:
-    build:
-      context: ./docker/dask_worker
-      dockerfile: Dockerfile_text_loading_worker
-    volumes:
-      - ./data:/data/data
-    networks:
-      - app_network
-    restart: always
-
-  dask_text_saving_worker:
-    build:
-      context: ./docker/dask_worker
-      dockerfile: Dockerfile_text_saving_worker
-    volumes:
-      - ./data:/data/data
-    networks:
-      - app_network
-    restart: always
-
-  dask_text_segmentation_worker:
-    build:
-      context: ./docker/dask_worker
-      dockerfile: Dockerfile_text_segmentation_worker
-    volumes:
-      - ./data:/data/data
-    networks:
-      - app_network
-    restart: always
-
-  dask_text_tokenization_worker:
-    build:
-      context: ./docker/dask_worker
-      dockerfile: Dockerfile_text_tokenization_worker
-    volumes:
-      - ./data:/data/data
-    networks:
-      - app_network
-    restart: always
-
-  dask_transcription_worker:
-    build:
-      context: ./docker/dask_worker
-      dockerfile: Dockerfile_transcription_worker
-    volumes:
-      - ./data:/data/data
+      - CONFIG_PATH=/app/config/config.yaml
     networks:
       - app_network
     restart: always
@@ -254,23 +69,12 @@ services:
       context: ./docker/django_app
       dockerfile: Dockerfile_django
     volumes:
-      - ./data:/data
-    depends_on:
-      - db
-      - youtube_downloader
-      - audio_converter
-      - audio_normalizer
-      - audio_splitter
-      - audio_trimmer
-      - transcription_service
-      - text_loader
-      - text_segmenter
-      - text_tokenizer
-      - ner_processor
-      - text_saver
+      - django_data:/data
     environment:
-      DATABASE_URL: postgres://your_user:your_password@db:5432/your_db
+      DATABASE_URL: ${DATABASE_URL}
       DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY}
+      DEBUG: ${DEBUG}
+      CONFIG_PATH: /app/config/config.yaml
     networks:
       - app_network
     ports:
@@ -281,11 +85,11 @@ services:
     build:
       context: ./docker/reverse_proxy
       dockerfile: Dockerfile_nginx
+    depends_on:
+      - django_app
     ports:
       - "80:80"
       - "443:443"
-    depends_on:
-      - django_app
     networks:
       - app_network
     restart: always
@@ -293,14 +97,19 @@ services:
   db:
     image: postgres:latest
     environment:
-      POSTGRES_USER: your_user
-      POSTGRES_PASSWORD: your_password
-      POSTGRES_DB: your_db
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     volumes:
       - pgdata:/var/lib/postgresql/data
     networks:
       - app_network
     restart: always
+    healthcheck:
+      test: ["CMD", "pg_isready", "-U", "${POSTGRES_USER}"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
 
 networks:
   app_network:
@@ -308,3 +117,9 @@ networks:
 
 volumes:
   pgdata:
+  youtube_data:
+  audio_data:
+  transcription_data:
+  celery_data:
+  django_data:
+  text_data:
