--- a/docker/downloaders/Dockerfile_download_manager
+++ b/docker/downloaders/Dockerfile_download_manager
@@ -1,30 +1,25 @@
-# Dockerfile_download_manager for Download Service
-FROM python:3.12-slim
+# Base image
+FROM python:3.10-slim
 
 # Install system dependencies
-RUN apt-get update && \
-    apt-get install -y --no-install-recommends \
-    ffmpeg \
-    && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y curl git build-essential ffmpeg && apt-get clean
+
+# Install Poetry
+ENV POETRY_VERSION=1.5.1
+RUN curl -sSL https://install.python-poetry.org | python3 -
+
+# Add Poetry to PATH
+ENV PATH="/root/.local/bin:$PATH"
 
 # Set working directory
 WORKDIR /app
 
-# Copy only the necessary files for dependencies first
-COPY pyproject.toml poetry.lock /app/
+# Copy project files
+COPY pyproject.toml poetry.lock ./
+COPY src ./src
 
-# Install Poetry
-RUN pip install --upgrade pip && \
-    pip install poetry
+# Install dependencies
+RUN poetry install --no-dev
 
-# Configure Poetry to not use virtual environments
-RUN poetry config virtualenvs.create false && poetry install --no-dev
-
-# Copy the rest of the application code
-COPY . /app
-
-# Expose the necessary ports if needed (optional)
-# EXPOSE 8000
-
-# Define the default command
-CMD ["poetry", "run", "python", "-m", "src.download_pipeline.download_manager"]
+# Set the entry point to the CLI
+CMD ["poetry", "run", "python", "src/cli/cli_download.py"]
