chore: refactoring and including better structure to codebase for SRP and SOLID reasons, also i subbed out pendulum for arrow because pendulum and poetry weren't playing nice

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,6 @@ authors = ["SSD"]
 license = "MIT"
 readme = "README.md"
 packages = [
-    { include = "app" },
     { include = "src" }
 ]
 
@@ -15,7 +14,7 @@ python = ">=3.10,<3.13"  # Python version
 django = "^4.0"  # Core Django framework
 dependency-injector = "^4.40.0"  # Dependency injection framework
 django-environ = "^0.4"  # Environment variable handling
-pendulum = "==2.1.1"  # Date/Time library
+
 
 # API and Real-time
 djangorestframework = "^3.13"  # Django REST Framework
@@ -59,6 +58,9 @@ structlog = "^23.0.0"  # Structlog for advanced logging
 
 # Memory Profiling
 memory_profiler = "^0.61.0"  # Memory profiling library
+
+# Date and Time Utilities
+arrow = "^1.2"  # Date and time library
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0"  # Testing framework
