--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,7 +59,7 @@ structlog = ">=23.0,<25.0"  # Structlog for advanced logging
 memory_profiler = ">=0.61,<1.0"  # Memory profiling library
 
 # Date and Time Utilities
-arrow = ">=1.2,<2.0"  # Date and time library
+pendulum = ">=3.0,<4.0"  # Date and time library
 
 [tool.poetry.dev-dependencies]
 pytest = ">=7.0,<9.0"  # Testing framework
@@ -70,7 +70,7 @@ mypy = ">=1.0,<2.0"  # Type checker
 pylint = ">=3.0,<4.0"  # Comprehensive linter
 bandit = ">=1.7,<2.0"  # Security analyzer
 pre-commit = ">=3.3,<5.0"  # Pre-commit hooks
-rope = ">=1.2,<2.0"  # Python refactoring library
+isort = ">=5.0,<6.0"  # Import sorter
 
 [tool.ruff]
 line-length = 88  # Match Black's default
