--- a/src/config/.env
+++ b/src/config/.env
@@ -20,7 +20,7 @@ RETRY_ON_FAILURE="true"  # Enable retry mechanism for failed tasks
 MAX_RETRIES="5"  # Maximum retry attempts
 RETRY_DELAY="5"  # Delay (in seconds) between retries
 
-# Environment Type
+# Environment type
 ENVIRONMENT="development"  # Environment type ('development', 'staging', 'production')
 
 # WhisperX Features
