chore: more refactors but also considering a redo of the project with my learnings in a new repo. I dun goofed and this is now a slight hot mess that would be much easier to do starting from scratch lol

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,6 +82,9 @@ select = [
     "B",    # flake8-bugbear
     "SIM",  # flake8-simplify
     "I",    # isort
+    "F401", # unused-import
+    "F403", # undefined-local-with-import-star
+    "I001"  # unsorted-imports
 ]
 
 ignore = ["E203"]  # Ignore Black-compatible line-break-before-binary-operator rule
