--- a/src/config/.env
+++ b/src/config/.env
@@ -16,7 +16,7 @@ TRANSCRIPTIONS_DIR="/app/transcriptions"  # Directory for raw transcription outp
 PROCESSED_TRANSCRIPTIONS_DIR="/app/processed_transcriptions"  # Directory for processed outputs
 
 # Retry and Error Handling
-RETRY_ON_FAILURE="true"  # Enable retry mechanism for failed tasks
+RETRY_ON_FAILURE="true"  # Enable retry mechanism for failed async_tasks
 MAX_RETRIES="5"  # Maximum retry attempts
 RETRY_DELAY="5"  # Delay (in seconds) between retries
 
